finishing file transfer from old project

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,5 +1,14 @@
 // Import your components CSS files here.
 @import "alert";
-@import "avatar";
-@import "form_legend_clear";
+@import "button";
+@import "calendar";
+@import "card";
+@import "datatron";
+@import "footer";
+@import "form";
+@import "header";
+@import "link";
+@import "list";
 @import "navbar";
+@import "quote";
+@import "title";
