--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Lmdbv2</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>LmdbBookingApp</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -17,5 +16,7 @@
     <%= render 'shared/flashes' %>
 
     <%= yield %>
+
+    <%= render 'shared/footer' %>
   </body>
 </html>
