--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,103 @@
-.navbar-lewagon {
+.navbar {
+  display: flex;
   justify-content: space-between;
-  background: white;
+  align-items: center;
+  padding: 20px;
+  width: 100%;
+  
+  img {
+     height: 4rem;
+  }
+  & > a {
+      display: flex;
+      align-items: center;
+  }
 }
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
+.menu-button-container {
+  display: flex;
+  height: 100%;
+  width: 30px;   
+  z-index: 10;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+.menu-button,
+.menu-button::before,
+.menu-button::after {
+  display: block;
+  background-color: var(--black);
+  position: absolute;
+  height: 4px;
+  width: 30px;
+  transition: transform 400ms cubic-bezier(0.23, 1, 0.320, 1);
+  border-radius: 2px;
+}
+
+.menu-button::before {
+  content: '';
+  margin-top: -10px;
+}
+
+.menu-button::after {
+  content: '';
+  margin-top: 10px;
+}
+
+#menu-toggle {
+  display: none;
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::before {
+  margin-top: 0px;
+  transform: rotate(405deg);
+  background-color: white;
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button {
+  background: rgba(255, 255, 255, 0);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::after {
+  margin-top: 0px;
+  transform: rotate(-405deg);
+  background-color: white;
+}
+
+.menu {
+list-style-type: none;
+position: absolute;
+  padding: 0;
+  margin: 0;
+  background-color: var(--red);
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  visibility: hidden;
+  opacity: 0;
+  text-align: right;
+  & > li > a {
+      color: white;
+      font-weight: bold;
+      font-size: 2em;
+  } 
+  & > li:first-child {
+      margin-top: 6em;
+  }
+  & > li {
+      margin: 2em 2em;
+  }
+}
+
+#menu-toggle:checked ~ .menu {
+  visibility: visible;
+  z-index: 1;
+  opacity: 1;
+  transition: visibility 0s, opacity 500ms cubic-bezier(0.23, 1, 0.320, 1);
+}
+
+@media screen and (min-width: 900px) {
+  .menu-button, #menu-toggle {
+      display: none;
+  }
 }
