--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,153 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<header class="wrapper header-mobile header-home">
+    <div class="half">
+        <h1>Escape game en plein air et activité œnoludique à <mark class="highlighted highlighted-red">Bourges</mark></h1>
+        <p class="sub-title">
+            Redécouvrez le patrimoine de la ville et de sa région grâce à nos jeux de piste uniques et des activités de cohésion originales.
+        </p>
+        <div class="ctas-container">
+            <%= link_to 'Réservez dès maintenant', new_inscription_booking_info_path, class: "cta cta-primary", role:"button" %>
+            <%= link_to 'Découvrez nos jeux', new_inscription_booking_info_path, class: "cta cta-secondary", role:"button" %>
+        </div>
+    </div>
+    <div class="half">
+        <%= image_tag "homepage-header.jpg", class:"header-img", alt:"Les mystères de Bourges, la meilleure activité de plein air à Bourges - Un escape game jeu de piste inédit !" %>
+    </div>
+</header>
+<section class="full-wrapper-red datatron-home">
+    <div class="wrapper wrapper-red">
+        <div id="explore-games">
+            <h2>Découvrez <mark class="highlighted highlighted-red">nos jeux</mark></h2>
+            <div class="game-cards">
+                <div class="game-card">
+                    <div class="game-details">
+                        <h3>🎒 Escape game en plein air</h3>
+                        <p>Partez à la découverte du patrimoine historique de la ville de Bourges avec nos sacs mystérieux. Passez un moment agréable entre amis, avec réflexion et divertissement garantis !</p>
+                    </div>
+                    <div class="game-pictures-grid">
+                        <% (1..4).each do |x| %>
+                            <%= image_tag "escape-game-bourges-loisirs-famille-amis-activite-plein-air-evjf-patrimoine-#{x}" %>    
+                        <% end %>   
+                    </div>
+                </div>
+                <div class="game-card">
+                    <div class="game-details">
+                        <h3>🍷 Wine Gaming</h3>
+                        <p>Pour vos séminaires et afterworks, boostez la cohésion de vos équipes avec un jeu mélant énigmes et dégustation de vins. Découvrez vite la nouveauté 2022 !</p>
+                    </div>
+                    <div class="game-pictures-grid">
+                        <% (1..4).each do |x| %>
+                            <%= image_tag "seminaire-bourges-team-building-entreprise-vin-centre-loire-cohesion-equipe-#{x}" %>    
+                        <% end %>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="bourges-game-board">
+            <h2>Bourges comme <mark class="highlighted highlighted-red">terrain de jeu</mark></h2>
+            <p class="sub-title">À mi-chemin entre escape game et jeu de piste, <a href="nos-parcours-escape-game-bourges.html">nos balades urbaines</a> et nos énigmes inédites sont imaginées autour du patrimoine de Bourges et de l’Histoire locale. Au cours de votre mission en plein air, vous découvrirez à la fois des lieux touristiques ou cachés du centre-ville. Attention, le temps vous est compté ! <em>Les mystères de Bourges</em>, c'est se creuser les méninges et en apprendre plus sur l'histoire d'un quartier tout en s'amusant.</p>
+            <div class="rankings">
+                <div class="data">
+                    <div class="half">
+                        <ul class="datatron">
+                            <li class="datatron-item">
+                                <span class="datatron-item-title-large">
+                                    430+
+                                    <i>avis Google</i>
+                                </span>
+                                <p class="datatron-item-content">De nombreux joueurs ont testé le jeu avant vous, et l'ont adoré. A votre tour d'en profiter !</p>
+                                <a class="cta-link" href="/">Lire les avis des joueurs</a>
+                            </li>
+                            <li class="datatron-item">
+                                <span class="datatron-item-title-large">
+                                    5 sur 5
+                                    <i>note moyenne</i>
+                                </span>
+                                <p class="datatron-item-content">Nos jeux sont uniques au monde car ils sont basés sur le patrimoine historique de la ville de Bourges. Nous les réalisons avec beaucoup de soin, et ça se voit.</p>
+                            </li>
+                            <li class="datatron-item">
+                                <span class="datatron-item-title-large">
+                                    100%
+                                    <i>de réussite</i>
+                                </span>
+                                <p class="datatron-item-content">Chez nous, tout le monde est gagnant. Pas de frustration, ni d'enfant qui pleure. Nous tolérons quelques minutes de jeu supplémentaire, contrairement aux escapes games classiques où l'on vous demande de sortir au bout de 60 minutes.</p>
+                            </li>
+                            <li class="datatron-item">
+                                <span class="datatron-item-title-large">
+                                    6000
+                                    <i>joueurs</i>
+                                </span>
+                                <p class="datatron-item-content">depuis l'été 2020. Et vous n'en faites pas encore partie ? Ça serait dommage de louper ça ... Réservez votre créneau dès maintenant !</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="half">
+                        <%= image_tag "escape-game-bourges-mysteres-patrimoine-cathedrale-agence-evenementielle", class:"datatron-img", alt:"Les mystères de Bourges, la meilleure activité de plein air à Bourges - Un escape game jeu de piste inédit !" %>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="wrapper wrapper-white">
+    <h2>Êtes-vous <mark class="highlighted highlighted-red">joueur</mark> ?</h2>
+    <p class="sub-title">En quête de nouvelles activités ludiques ? <a href="nos-parcours-escape-game-bourges.html">Nos parcours</a> sont destinés à des équipes de 3 à 6 joueurs. Tout le monde peut jouer de 7 à 77 ans. Inutile de connaître la ville de Bourges : nos escapes games et parcours-jeux font appel à votre esprit de déduction, de logique et votre sens de l'observation.</p>
+    <ul class="cards-wrapper">
+        <li class="card-container">
+            <%= image_tag "escape-game-bourges-loisirs-patrimoine-gamers.jpg", class:"card-cover-image" %>
+            <div class="card-content">
+                <h3>Fan de jeux ?</h3>
+                <p class="sub-title">Venez battre des records de résolution d'aventure ! Relevez les défis le plus vite possible, courrez pour casser le chronomètre et remporter la victoire plus vite que quiconque ne l'aura fait avant vous. Ou bien venez lancer une partie avec des amis et passez un bon moment ensemble.</p>
+            </div>
+        </li>
+        <li class="card-container">
+            <%= image_tag "escape-game-bourges-loisirs-patrimoine-touristes-tourisme-passage.jpg", class:"card-cover-image" %>
+            <div class="card-content">
+                <h3>Touristes</h3>
+                <p class="sub-title">Découvrez les richesses cachées de notre patrimoine autrement qu'avec une visite guidée classique. Epargnez-vous le mécontentement de vos ados et innovez sur les activités de famille en proposant notre escape game outdoor. Vous allez épatez tout le monde et le meilleur souvenir du passage à Bourges, c'est vous qui l'aurez proposé.</p>
+            </div>
+        </li>
+        <li class="card-container">
+            <%= image_tag "escape-game-bourges-loisirs-patrimoine-berruyers.jpg", class:"card-cover-image" %>
+            <div class="card-content">
+                <h3>Berruyers (comme nous)</h3>
+                <p class="sub-title">Venez dénicher les endroits cachés que vous n'avez jamais vu et que vous ne soupçonnez pas dans votre ville. Avouez-le, vous vivez ici depuis longtemps et pourtant il y a encore des rues qui vous sont totalement inconnues. On fait le pari de vous faire découvrir au moins une chose que vous ne saviez pas encore sur le ville. Chiche ?</p>
+            </div>
+        </li>
+        <li class="card-container">
+            <%= image_tag "escape-game-bourges-loisirs-patrimoine-evjf.jpg", class:"card-cover-image" %>
+            <div class="card-content">
+                <h3>Futur(e) marié(e)</h3>
+                <p class="sub-title"> Vous souhaitez organiser un enterrement de vie de jeune fille (le fameux EVJF) ou un enterrement de vie de garçon (le mythique EVG) ? Nos parcours sont une bonne idée de sortie pour réunir vos plus proches amis et les témoins du mariage, à Bourges. Et en plus qui dit Jacques Coeur, dit Coeur. Coeur = Amour. Amour = Mariage. CQFD.</p>
+            </div>
+        </li>
+        <li class="card-container">
+            <%= image_tag "escape-game-bourges-loisirs-patrimoine-seminaire-entreprise-professionelle-collegues.jpg", class:"card-cover-image" %>
+            <div class="card-content">
+                <h3>Patron ou collègue</h3>
+                <p class="sub-title">C'est le moment de renforcer les liens avec votre équipe ou vos collègues. On ne choisit pas toujours ses collègues mais on peut facilement passer un bon moment ensemble. Il n'y a pas que le travail dans la vie. Et nos jeux vont vous le prouver.</p>
+            </div>
+        </li>
+        <li class="card-container">
+            <%= image_tag "escape-game-bourges-loisirs-patrimoine-etudiants.jpg", class:"card-cover-image" %>
+            <div class="card-content">
+                <h3>Étudiants</h3>
+                <p class="sub-title">Vous êtes étudiants et vous pensez qu'il n'y a rien à faire à Bourges pour s'amuser ? Eh bien c'est raté. Nous vous mettons au défi de venir jouer avec nous et de casser les records au chronomètre. Un bon moyen d'affuter son corp et son esprit et de découvrir sa nouvelle ville d'adoption. Vos potes seront jaloux de ne pas avoir eu la même idée.</p>
+            </div>
+        </li>
+    </ul>
+</section>
+<section class="full-wrapper-red datatron-home">
+    <div class="wrapper wrapper-red">
+        <h2>Infos <mark class="highlighted highlighted-red">pratiques</mark></h2>
+        <p class="sub-title"><em>Les mystères de Bourges</em> vous accueillent uniquement <%= link_to 'sur réservation', new_inscription_booking_info_path %>.</p>
+        <p class="sub-title"><strong>Horaires :</strong> Nous jouons du lundi au dimanche de 10h à 17h, toute l'année.</p>
+        <p class="sub-title">Nos jeux de piste sont situés en <strong>centre-ville de Bourges</strong>. Pour y accéder, vous pouvez venir :</p>
+        <ul class="bullet-point">
+            <li>en voiture. Il y a plusieurs parkings gratuits à proximité : <em>Place Séraucourt</em>, <em>Cour Anatole France</em>, <em>Place des Marronniers</em> par exemple. Il existe aussi des parkings payants : <em>Place du Berry</em> ou le parking <em>Mairie-Cathédrale</em>.</li>
+            <li>en bus, arrêt <em>Nation</em>, <em>Planchat</em> ou <em>Europe</em>.</li>
+            <li>en utilisant la navette gratuite du centre ville.</li>
+        </ul>
+        <p class="sub-title"><strong>Retrouvez-nous</strong> et contactez-nous aussi sur <a href="http://www.facebook.com/lesmysteresdebourges">Facebook</a> et <a href="http://www.instagram.com/lesmysteresdebourges">Instagram</a> !</p>
+        <%= link_to 'Réservez dès maintenant', new_inscription_booking_info_path, class: "cta cta-big cta-primary", role:"button" %>
+    </div>
+</section>
