--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -1,5 +1,5 @@
 .header-mobile {
-    padding: 30px 20px;
+    padding: 10px 20px 30px 20px;
 
     .cta:not(:last-child) {
         margin-bottom: 16px;
