--- a/app/assets/stylesheets/layouts/_global.scss
+++ b/app/assets/stylesheets/layouts/_global.scss
@@ -37,14 +37,10 @@ strong {
 	position: relative;
 }
 
-.wrapper-red {
+.wrapper-red, .full-wrapper-red {
 	background-color: var(--light-red);
 }
 
 .wrapper-red, .wrapper-white {
 	padding: 36px 20px;
-}
-
-.full-wrapper-red {
-	background-color: var(--light-red);
 }
