--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,7 +2,7 @@
         <div class="wrapper footer-wrapper">
         <div class="footer-section">
             <span>A propos</span>
-            <p><em>Les mystères de Bourges</em> est un jeu de piste sous forme de balades urbaines ponctuées d'énigmes. Conçu à Bourges, nos parcours s'appuient sur le patrimoine local berruyer afin de faire découvrir des endroits touristiques, connus ou non à tous les publics curieux d'apprendre en s'amusant.</p>
+            <p>Avec <em>Les mystères de Bourges</em>, nous vous proposons des jeux de piste sous forme de balades urbaines ponctuées d'énigmes. Conçus à Bourges, nos parcours s'appuient sur le patrimoine local berruyer afin de faire découvrir des endroits touristiques, connus ou non à tous les publics curieux d'apprendre en s'amusant.</p>
         </div>
         <div class="footer-section">
             <span>Tout ce qu'il faut savoir</span>
