--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
 
     <ul class="menu">
         <li><%= link_to "Accueil", root_path %></li>
-        <li><%= link_to "Jeux", root_path %></li>
+        <li><%= link_to "Jeux", parcours_path %></li>
         <li><%= link_to "Tarifs", root_path %></li>
         <li><%= link_to "Réservation", new_inscription_booking_info_path %></li>
     </ul>
