some static pages

--- a/app/views/pages/parcours.html.erb
+++ b/app/views/pages/parcours.html.erb
@@ -44,7 +44,7 @@
         </div>
         <div id="bourges-game-board">
             <h2>Vous ne savez pas <mark class="highlighted highlighted-red">quoi faire à Bourges ?</mark></h2>
-            <p class="sub-title">Nous avons l'activité qu'il vous faut. Culturel et ludique, sans écran... nos jeux de piste ont décidément tout pour (vous) plaire.</p>
+            <p class="sub-title">Nous avons l'activité qu'il vous faut. Culturels, ludiques et sans écran... nos jeux de piste ont décidément tout pour (vous) plaire.</p>
             <div class="rankings">
                 <div class="data">
                     <div class="half">
@@ -86,4 +86,9 @@
             </div>
         </div>
     </div>
+</section>
+<section class="wrapper wrapper-white">
+    <h2>Réservez <mark class="highlighted highlighted-red">dès maintenant</mark></h2>
+    <p class="sub-title">L'aventure vous attend. Réunissez vos meilleurs amis et lancez vous dans l'aventure ! Il ne manque plus que vous pour briller.</p>
+    <%= link_to 'Réservez dès maintenant', new_inscription_booking_info_path, class: "cta cta-big cta-primary", role:"button" %>
 </section>
