--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,10 +7,10 @@
         <div class="footer-section">
             <span>Tout ce qu'il faut savoir</span>
             <ul>
-            <li><a href="nos-parcours-escape-game-bourges.html">Nos parcours</a></li>
-            <li><a href="tarifs-escape-game-bourges.html">Tarifs</a></li>
+            <li><%= link_to 'Nos parcours', parcours_path %></li>
+            <li><%= link_to 'Tarifs', tarifs_path %></li>
             <li><a href="bon-cadeau-escape-game-bourges.html">Bon cadeau</a></li>
-            <li><a href="notre-concept-escape-game-bourges.html">Concept</a></li>
+            <li><%= link_to 'Concept', concept_path %></li>
             <li><a href="avis-escape-game-bourges.html">Avis de joueurs</a></li>
             <li><a href="faq-escape-game-bourges.html">Foire aux questions</a></li>
             </ul>
@@ -22,9 +22,9 @@
             <li><a href="histoire-escape-game-bourges.html">Notre histoire</a></li>
             <li><a href="presse-escape-game-bourges.html">Ils parlent de nous</a></li>
             <li><a href="nos-amis.html">Nos amis</a></li>
-            <li><a href="politique-confidentialite.html">Politique de confidentialité</a></li>
-            <li><a href="conditions-generales-CGU.html">CGU</a></li>
-            <li><a href="mentions-legales.html">Mentions légales</a></li>
+            <li><%= link_to 'Politique de confidentialité', politique_confidentialite_path %></li>
+            <li><%= link_to 'CGU', cgu_path %></li>
+            <li><%= link_to 'Mentions légales', mentions_legales_path %></li>
             </ul>
         </div>
         <div class="footer-section">
