avancement pricing page

--- a/app/views/pages/tarifs.html.erb
+++ b/app/views/pages/tarifs.html.erb
@@ -12,3 +12,37 @@
         <%= image_tag "homepage-header.jpg", class:"header-img", alt:"Les mystères de Bourges, la meilleure activité de plein air à Bourges - Un escape game jeu de piste inédit !" %>
     </div>
 </header>
+<section class="full-wrapper-red datatron-home">
+    <div class="wrapper wrapper-red">
+        <div class="price-cards">
+            <div class="price-card">
+                <div class="price-card-title">
+                    <div class="main-title" id="adult">Adulte</div>
+                    <div class="sub-title">plus de 12 ans</div>
+                </div>
+                <div class="price">à partir de 20 euros</div>
+            </div>
+            <div class="price-card">
+                <div class="price-card-title">
+                    <div class="main-title" id="child">Jeune</div>
+                    <div class="sub-title">de 8 à 11 ans inclus</div>
+                </div>
+                <div class="price">8 euros</div>
+            </div>
+            <div class="price-card">
+                <div class="price-card-title">
+                    <div class="main-title" id="baby">Enfant</div>
+                    <div class="sub-title">moins de 8 ans</div>
+                </div>
+                <div class="price">Gratuit</div>
+            </div>
+            <div class="price-card">
+                <div class="price-card-title">
+                    <div class="main-title" id="couple">Forfait 2 personnes</div>
+                    <div class="sub-title">sur "A vaillant coeur" uniquement</div>
+                </div>
+                <div class="price">50 euros</div>
+            </div>
+        </div>
+    </div>
+</section>
