--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
     <ul class="menu">
         <li><%= link_to "Accueil", root_path %></li>
         <li><%= link_to "Jeux", parcours_path %></li>
-        <li><%= link_to "Tarifs", root_path %></li>
+        <li><%= link_to "Tarifs", tarifs_path %></li>
         <li><%= link_to "Réservation", new_inscription_booking_info_path %></li>
     </ul>
 </nav>
