--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -59,6 +59,54 @@
     }
 }
 
+.price-card {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+    justify-content: space-around;
+	position: relative;
+	width: 100%;
+    min-height: 140px;
+	background-color: #fff;
+	border-radius: 6px;
+	box-shadow: var(--box-shadow);
+	transition: all .3s ease-in-out;
+    margin-bottom: 20px;
+    .main-title {
+        font-family: var(--title);
+        font-size: 1.6em;
+        text-align: center;
+        font-variation-settings: "wght" 700;
+        &::before {
+            content: '';
+            background-size: 20px 20px;
+            display: inline-block;
+            width: 20px; 
+            height: 20px;
+            margin-right: 10px;        
+        }
+    }
+    #adult::before {
+        background-image: url(adult.png);
+    }
+    #child::before {
+        background-image: url(child.png);
+    }
+    #baby::before {
+        background-image: url(baby.png);
+    }
+    #couple::before {
+        background-image: url(couple.png);
+    }
+    .sub-title {
+        margin-bottom: 0;
+    }
+    .price {
+        margin-bottom: 16px;
+        font-variation-settings: "wght" 700;
+    }
+}
+
 @media (max-width: 880px) {
     .game-cards {
         flex-direction: column;
@@ -79,5 +127,9 @@
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 2em;
+    }
+
+    .price-cards {
+        display: flex;
     }
 }
