--- a/app/views/pages/tarifs.html.erb
+++ b/app/views/pages/tarifs.html.erb
@@ -1,19 +1,19 @@
 <header class="wrapper header-mobile header-home">
     <div class="half">
         <h1>Les tarifs de nos <mark class="highlighted highlighted-red">escape games en plein air</mark></h1>
-        <p class="sub-title">
-            Par ici la monnaie ! Vous retrouverez ici nos tarifs concernant les escape game urbains.
-        </p>
+        <p class="sub-title">Par ici la monnaie ! Vous retrouverez ici nos tarifs concernant les escape game urbains.</p>
         <div class="ctas-container">
             <%= link_to 'Réservez dès maintenant', new_inscription_booking_info_path, class: "cta cta-primary", role:"button" %>
         </div>
     </div>
     <div class="half">
-        <%= image_tag "homepage-header.jpg", class:"header-img", alt:"Les mystères de Bourges, la meilleure activité de plein air à Bourges - Un escape game jeu de piste inédit !" %>
+        <%= image_tag "escape-game-bourges-loisirs-famille-amis-activite-plein-air-evjf-patrimoine-5.jpg", class:"header-img", alt:"Une bourse en cuir avec des pièces de monnaie, pour le jeu Les Mystères de Bourges, escape game en plein air à Bourges" %>
     </div>
 </header>
 <section class="full-wrapper-red datatron-home">
     <div class="wrapper wrapper-red">
+        <h2>Combien ça coûte ?</h2>
+        <p class="sub-title">Parce que notre ville est unique, nos parcours le sont aussi ! Les histoires berruyères que vous allez (re)découvrir, vous ne les verrez nulle part ailleurs. Ces jeux, éducatifs, culturels et divertissants, nous les avons écrits, mis en page, imaginés et conçus, jusqu’à fabriquer nous-mêmes des objets inédits. Sur nos deux parcours, vous êtes autonomes, mais notre équipe est toujours là pour vous accompagner ! Tout a été créé sur mesure, pour vous offrir une expérience ludique et originale. Une activité pour s’amuser tout en apprenant, ça n’a pas de prix, non ?</p>
         <div class="price-cards">
             <div class="price-card">
                 <div class="price-card-title">
@@ -42,6 +42,23 @@
                     <div class="sub-title">sur "A vaillant coeur" uniquement</div>
                 </div>
                 <div class="price">50 euros</div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="wrapper wrapper-white">
+    <h2>Peut-on offrir un <mark class="highlighted highlighted-red">bon cadeau</mark> ?</h2>
+    <p class="sub-title">On ne présente plus le concept du bon cadeau. Vous savez, ce sont ces bons prépayés que vous pouvez offrir à une personne quand vous préférez que ce soit elle qui choisisse son cadeau. Eh bien, figurez-vous que les cartes cadeaux existent aussi pour ceux qui savent choisir !</p>
+    <div class="rankings">
+        <div class="data">
+            <div class="half">
+                <p class="sub-title">Alors, parce qu’on a toujours quelque chose à fêter (anniversaire, naissance, mariage, obtention d’un diplôme, enterrement de vie de jeune fille ou de garçon … ), notre bon cadeau est une valeur sûre. Et nos bons cadeaux font à la fois l’enthousiasme de ceux qui les offrent et le bonheur de ceux qui les reçoivent.</p>
+                <p class="sub-title">Vous souhaitez faire plaisir à vos amis ou votre famille ? Faites-leur (re)découvrir les charmes de votre ville grâce à nos parcours en plein air !</p>
+                <p class="sub-title">Quoi de plus plaisant qu’un moment partagé en famille ou entre amis pour se retrouver ? Où amusement, challenge et découvertes ludiques sont les maîtres-mots ?</p>
+                <p class="sub-title">Plus qu’une expérience, offrez des souvenirs à vos proches !</p>
+            </div>
+            <div class="half">
+                <%= image_tag "escape-game-bourges-loisirs-famille-amis-activite-plein-air-evjf-patrimoine-bon-cadeau", class:"datatron-img", alt:"Sophie Bouakkaz tient un bon cadeau Les Mystères de Bourges, un escape game en centre ville de Bourges autour du patrimoine." %>
             </div>
         </div>
     </div>
