--- a/app/views/pages/parcours.html.erb
+++ b/app/views/pages/parcours.html.erb
@@ -24,7 +24,7 @@
                     </div>
                     <div class="game-pictures-grid">
                         <% [3, 5, 7, 6].each do |x| %>
-                            <%= image_tag "escape-game-bourges-loisirs-famille-amis-activite-plein-air-evjf-patrimoine-#{x}" %>    
+                            <%= image_tag "escape-game-bourges-loisirs-famille-amis-activite-plein-air-evjf-patrimoine-#{x}", alt: "Photos de joueurs et des éléments du jeu de piste A vaillant coeur, le premier jeu de piste façon escape game à Bourges autour de la vie de Jacques Coeur." %>    
                         <% end %>   
                     </div>
                     <div class="english-flag">Also in English 🇬🇧</div>
@@ -36,7 +36,7 @@
                     </div>
                     <div class="game-pictures-grid">
                         <% [8, 9, 4, 10].each do |x| %>
-                            <%= image_tag "escape-game-bourges-loisirs-famille-amis-activite-plein-air-evjf-patrimoine-#{x}" %>    
+                            <%= image_tag "escape-game-bourges-loisirs-famille-amis-activite-plein-air-evjf-patrimoine-#{x}", alt: "Photos et images des joueurs et des éléments de jeu de La Grande His'Tory, le deuxième escape game urbain autour du patrimoine de la ville de Bourges, autour de la vie de Geoffroy Tory." %>    
                         <% end %>
                     </div>
                 </div>
@@ -80,7 +80,7 @@
                         </ul>
                     </div>
                     <div class="half">
-                        <%= image_tag "escape-game-bourges-loisirs-famille-amis-activite-plein-air-evjf-patrimoine-joueurs", class:"datatron-img", alt:"Les mystères de Bourges, la meilleure activité de plein air à Bourges - Un escape game jeu de piste inédit !" %>
+                        <%= image_tag "escape-game-bourges-loisirs-famille-amis-activite-plein-air-evjf-patrimoine-joueurs", class:"datatron-img", alt:"Deux joueurs autour de la carte de la zone de jeu pour l'escape game urbain La grande his'Tory, jeu de piste en plein air autour du patrimoine de la ville de Bourges, conçu par Les Mystères de Bourges." %>
                     </div>
                 </div>
             </div>
