--- a/app/views/pages/parcours.html.erb
+++ b/app/views/pages/parcours.html.erb
@@ -88,6 +88,11 @@
     </div>
 </section>
 <section class="wrapper wrapper-white">
+    <h2>Notre <mark class="highlighted highlighted-red">concept</mark></h2>
+    <p class="sub-title">Vous pensiez tout connaître de la ville de Bourges ? Savez-vous vraiment ce que cache la ville ? À mi-chemin entre escape game et jeu de piste, nos balades urbaines inédites sont créées autour du patrimoine de Bourges. Au cours de votre mission en plein air, vous arpenterez les rues de la ville : un terrain de jeu incomparable et unique pour une immersion totale dans le passé historique de Bourges.</p>
+    <p class="sub-title">Décodez, observez et ouvrez les yeux à la recherche d’indices cachés afin de résoudre les énigmes pour pouvoir progresser dans notre jeu. Nos énigmes sont authentiques et sont imaginées autour de l’Histoire locale de notre belle cité. (Re)Découvrez Bourges comme vous ne l’avez jamais vu ! Attention, le temps vous est compté !</p>
+    <p class="sub-title">Les mystères de Bourges, c'est se creuser les méninges et en apprendre plus sur l'histoire d'un quartier tout en s'amusant. Une activité idéale et une manière originale de visiter la ville comme un musée à ciel ouvert. Visitez la ville de Bourges autrement, entre amis, en famille, et même entre collègues, pour des occasions particulières (un séminaire ? un EVJF ?) ou pour le simple plaisir d’être ensemble !</p>
+    <%= image_tag "jeu-piste-activite-parcours-plein-air-divertissante-famille-amis-bourges-nuits-lumieres", class:"landscape-banner-image", alt:"Objet magique contenu dans le sac de jeu La grande His'Tory, sous la lumière bleue des Nuits Lumières de Bourges." %>
     <h2>Réservez <mark class="highlighted highlighted-red">dès maintenant</mark></h2>
     <p class="sub-title">L'aventure vous attend. Réunissez vos meilleurs amis et lancez vous dans l'aventure ! Il ne manque plus que vous pour briller.</p>
     <%= link_to 'Réservez dès maintenant', new_inscription_booking_info_path, class: "cta cta-big cta-primary", role:"button" %>
