--- a/app/views/pages/tarifs.html.erb
+++ b/app/views/pages/tarifs.html.erb
@@ -56,6 +56,9 @@
                 <p class="sub-title">Vous souhaitez faire plaisir à vos amis ou votre famille ? Faites-leur (re)découvrir les charmes de votre ville grâce à nos parcours en plein air !</p>
                 <p class="sub-title">Quoi de plus plaisant qu’un moment partagé en famille ou entre amis pour se retrouver ? Où amusement, challenge et découvertes ludiques sont les maîtres-mots ?</p>
                 <p class="sub-title">Plus qu’une expérience, offrez des souvenirs à vos proches !</p>
+                <div class="ctas-container">
+                    <%= link_to 'Contactez-nous', contact_path, class: "cta cta-secondary", role:"button" %>
+                </div>
             </div>
             <div class="half">
                 <%= image_tag "escape-game-bourges-loisirs-famille-amis-activite-plein-air-evjf-patrimoine-bon-cadeau", class:"datatron-img", alt:"Sophie Bouakkaz tient un bon cadeau Les Mystères de Bourges, un escape game en centre ville de Bourges autour du patrimoine." %>
