--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -16,7 +16,7 @@
         <div class="footer-section">
             <span>En savoir plus</span>
             <ul>
-                <li><a href="reservation-escape-game-bourges.html">Contact</a></li>
+                <li><%= link_to 'Contact', contact_path %></li>
                 <li><a href="histoire-escape-game-bourges.html">Notre histoire</a></li>
                 <li><a href="presse-escape-game-bourges.html">Ils parlent de nous</a></li>
                 <li><a href="nos-amis.html">Nos amis</a></li>
