--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -69,14 +69,14 @@
                                     100%
                                     <i>de réussite</i>
                                 </span>
-                                <p class="datatron-item-content">Chez nous, tout le monde est gagnant. Pas de frustration, ni d'enfant qui pleure. Nous tolérons quelques minutes de jeu supplémentaire, contrairement aux escapes games classiques où l'on vous demande de sortir au bout de 60 minutes.</p>
+                                <p class="datatron-item-content">Chez nous, tout le monde est gagnant. Pas de frustration, ni d'enfant qui pleure. Nous tolérons quelques minutes de jeu supplémentaires, contrairement aux escapes games classiques où l'on vous demande de sortir au bout de 60 minutes.</p>
                             </li>
                             <li class="datatron-item">
                                 <span class="datatron-item-title-large">
                                     6000
                                     <i>joueurs</i>
                                 </span>
-                                <p class="datatron-item-content">depuis l'été 2020. Et vous n'en faites pas encore partie ? Ça serait dommage de louper ça ... Réservez votre créneau dès maintenant !</p>
+                                <p class="datatron-item-content">depuis l'été 2020. On dit souvent qu’à Bourges, on est loin de tout, mais finalement tout le monde finit par passer ici ... Et vous n'en faites pas encore partie ? Ça serait dommage de louper ça. Réservez votre créneau dès maintenant !</p>
                             </li>
                         </ul>
                     </div>
@@ -103,14 +103,14 @@
             <%= image_tag "escape-game-bourges-loisirs-patrimoine-touristes-tourisme-passage.jpg", class:"card-cover-image", alt: "Vue de dos de 3 joueurs, chacun porte un sac de jeu de La grande HisTory, parcours jeu de piste façon escape game à Bourges autour de la vie de Geoffroy Tory" %>
             <div class="card-content">
                 <h3>Touristes</h3>
-                <p class="sub-title">Découvrez les richesses cachées de notre patrimoine autrement qu'avec une visite guidée classique. Epargnez-vous le mécontentement de vos ados et innovez sur les activités de famille en proposant notre escape game outdoor. Vous allez épatez tout le monde et le meilleur souvenir du passage à Bourges, c'est vous qui l'aurez proposé.</p>
+                <p class="sub-title">Pour visiter Bourges autrement, découvrez les richesses cachées de notre patrimoine autrement qu'avec une visite guidée classique. Epargnez-vous le mécontentement de vos ados et innovez sur les activités de famille en proposant notre escape game outdoor. Vous allez épatez tout le monde et le meilleur souvenir du passage à Bourges, c'est vous qui l'aurez proposé.</p>
             </div>
         </li>
         <li class="card-container">
             <%= image_tag "escape-game-bourges-loisirs-patrimoine-berruyers.jpg", class:"card-cover-image", alt: "Vue contre-plongée de Sophie et Clément Bouakkaz, cofondateurs des jeux de piste Les Mystères de Bourges, escape game urbain à Bourges autour du patrimoine de la ville" %>
             <div class="card-content">
                 <h3>Berruyers (comme nous)</h3>
-                <p class="sub-title">Venez dénicher les endroits cachés que vous n'avez jamais vu et que vous ne soupçonnez pas dans votre ville. Avouez-le, vous vivez ici depuis longtemps et pourtant il y a encore des rues qui vous sont totalement inconnues. On fait le pari de vous faire découvrir au moins une chose que vous ne saviez pas encore sur le ville. Chiche ?</p>
+                <p class="sub-title">Venez dénicher les endroits cachés que vous n'avez jamais vus et que vous ne soupçonnez pas dans votre ville. Avouez-le, vous vivez ici depuis longtemps et pourtant il y a encore des rues qui vous sont totalement inconnues. On fait le pari de vous faire découvrir au moins une chose que vous ne saviez pas encore sur le ville. Chiche ?</p>
             </div>
         </li>
         <li class="card-container">
@@ -131,7 +131,7 @@
             <%= image_tag "escape-game-bourges-loisirs-patrimoine-etudiants.jpg", class:"card-cover-image", alt: "Groupe de jeunes parcourant les vieilles rues du centre-ville historique de Bourges à la recherche des indices cachés dans le patrimoine pour le jeu de piste A Vaillaint coeur, Les Mystères de Bourges." %>
             <div class="card-content">
                 <h3>Étudiants</h3>
-                <p class="sub-title">Vous êtes étudiants et vous pensez qu'il n'y a rien à faire à Bourges pour s'amuser ? Eh bien c'est raté. Nous vous mettons au défi de venir jouer avec nous et de casser les records au chronomètre. Un bon moyen d'affuter son corp et son esprit et de découvrir sa nouvelle ville d'adoption. Vos potes seront jaloux de ne pas avoir eu la même idée.</p>
+                <p class="sub-title">Vous êtes étudiants et vous pensez qu'il n'y a rien à faire à Bourges pour s'amuser ? Eh bien c'est raté. Nous vous mettons au défi de venir jouer avec nous et de casser les records au chronomètre. Un bon moyen d'affûter son corps et son esprit et de découvrir sa nouvelle ville d'adoption. Vos potes seront jaloux de ne pas avoir eu la même idée.</p>
             </div>
         </li>
     </ul>
