--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -10,3 +10,33 @@
         <%= image_tag "escape-game-bourges-loisirs-famille-amis-activite-plein-air-evjf-patrimoine-5.jpg", class:"header-img", alt:"Une bourse en cuir avec des pièces de monnaie, pour le jeu Les Mystères de Bourges, escape game en plein air à Bourges" %>
     </div>
 </header>
+<section class="full-wrapper-red">
+    <div class="wrapper wrapper-red">
+        <h2>Principe du jeu</h2>
+        <ul class="bullet-point">
+          <% FAQ['principe'].each_with_index do |el, index| %>
+            <li><a href="#principe-<%= index %>" class="navbar-wagon-link"><%= el['question'] %></a></li>
+          <% end %>
+        </ul>
+        <h2>Réservation</h2>
+        <ul class="bullet-point">
+          <% FAQ['reservation'].each_with_index do |el, index| %>
+            <li><a href="#reservation-<%= index %>" class="navbar-wagon-link"><%= el['question'] %></a></li>
+          <% end %>
+        </ul>
+    </div>
+</section>
+<section class="wrapper wrapper-white">
+    <h2>Principe du jeu</h2>
+    <% FAQ['principe'].each_with_index do |el, index| %>
+        <h3 id="principe-<%= index %>"><%= el['question'] %></h3>
+        <p class="sub-title"><%= el['reponse'] %></p>
+      </div>
+    <% end %>
+    <h2>Réservation</h2>
+    <% FAQ['reservation'].each_with_index do |el, index| %>
+        <h3 id="reservation-<%= index %>"><%= el['question'] %></h3>
+        <p class="sub-title"><%= el['reponse'] %></p>
+      </div>
+    <% end %>
+</section>
