nuits lumiere page

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,5 +13,6 @@
         <li><%= link_to "Jeux", parcours_path %></li>
         <li><%= link_to "Tarifs", tarifs_path %></li>
         <li><%= link_to "Réservation", new_inscription_booking_info_path %></li>
+        <li><%= link_to "Podcast Nuits Lumière", nuitslumiere_path %></li>
     </ul>
 </nav>
