--- a/app/assets/stylesheets/components/_title.scss
+++ b/app/assets/stylesheets/components/_title.scss
@@ -17,12 +17,16 @@ h1 {
     font-family: var(--title);
     font-variation-settings: "wght" 700;
     border-radius: 3px;
+    background-color: inherit;
+    padding: 0;
 }
 
 .highlighted-red {
-    padding: 0;
     color: var(--red);
-    background-color: inherit;
+}
+
+.highlighted-blue {
+    color: #1D40BA;
 }
 
 .sub-title {
