--- a/app/assets/stylesheets/layouts/_global.scss
+++ b/app/assets/stylesheets/layouts/_global.scss
@@ -29,7 +29,7 @@ p {
 	margin: 0 0 30px;
 }
 
-strong {
+strong, b {
 	font-variation-settings: "wght" 700;
 }
 
@@ -41,6 +41,10 @@ strong {
 	background-color: var(--light-red);
 }
 
-.wrapper-red, .wrapper-white {
+.wrapper-blue, .full-wrapper-blue {
+	background-color: #dde5ff;
+}
+
+.wrapper-red, .wrapper-white, .wrapper-blue {
 	padding: 36px 20px;
 }
