--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -11,6 +11,7 @@
                 <li><%= link_to 'Tarifs / Bon cadeau', tarifs_path %></li>
                 <li><a href="avis-escape-game-bourges.html">Avis de joueurs</a></li>
                 <li><a href="faq-escape-game-bourges.html">Foire aux questions</a></li>
+                <li><%= link_to 'Podcast Nuits Lumière', nuitslumiere_path %></li>
             </ul>
         </div>
         <div class="footer-section">
