--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,7 +9,7 @@
             <ul>
                 <li><%= link_to 'Nos parcours', parcours_path %></li>
                 <li><%= link_to 'Tarifs / Bon cadeau', tarifs_path %></li>
-                <li><a href="avis-escape-game-bourges.html">Avis de joueurs</a></li>
+                <%# <li><a href="avis-escape-game-bourges.html">Avis de joueurs</a></li> %>
                 <li><%= link_to 'Foire aux questions', faq_path %></li>
                 <li><%= link_to 'Podcast Nuits Lumière', nuitslumiere_path %></li>
             </ul>
@@ -18,9 +18,9 @@
             <span>En savoir plus</span>
             <ul>
                 <li><%= link_to 'Contact', contact_path %></li>
-                <li><a href="histoire-escape-game-bourges.html">Notre histoire</a></li>
+                <%# <li><a href="histoire-escape-game-bourges.html">Notre histoire</a></li>
                 <li><a href="presse-escape-game-bourges.html">Ils parlent de nous</a></li>
-                <li><a href="nos-amis.html">Nos amis</a></li>
+                <li><a href="nos-amis.html">Nos amis</a></li> %>
                 <li><%= link_to 'Politique de confidentialité', politique_confidentialite_path %></li>
                 <li><%= link_to 'CGU', cgu_path %></li>
                 <li><%= link_to 'Mentions légales', mentions_legales_path %></li>
