mise a jour cgu

--- a/app/views/pages/cgu.html.erb
+++ b/app/views/pages/cgu.html.erb
@@ -23,7 +23,7 @@
 
     <h2>Article 4 : Prix – Paiement</h2>
         <h3>4.1 - Prix</h3>
-        <p class="sub-title">Les tarifs de <em>Les mystères de Bourges</em> sont indiqués sur le site internet www.lesmysteresdebourges.fr et sont en euros, sans prendre en compte la TVA puisque la présente micro-entreprise n’est pas assujettie à celle-ci.</p>
+        <p class="sub-title">Les tarifs de <em>Les mystères de Bourges</em> sont indiqués sur le site internet www.lesmysteresdebourges.fr et sont en euros, toutes taxes comprises (TTC).</p>
         <p class="sub-title"><em>Les mystères de Bourges</em> se réserve le droit de modifier les prix figurant sur son site internet à tout moment.</p>
         <p class="sub-title">Dans tous les cas, la prestation sera facturée sur la base des tarifs en vigueur et mentionnés sur le site internet au moment de la réservation.</p>
         
